<resources>
    <string name="app_name">점메추</string>

    <string name="menu">메뉴</string>
    <string name="myPage">마이 페이지</string>
    <string name="roulette">돌림판</string>
    <string name="next">다음</string>
    <string name="app_title">점심 메뉴 추천</string>
    <string name="confirm">확인</string>
    <string name="close">닫기</string>
    <string name="count">%d/%d</string>

    <string name="nick_name_text_1">닉네임</string>
    <string name="nick_name_text_2">닉네임 설정</string>
    <string name="nick_name_text_3">닉네임을 입력해주세요.(1자 ~ 8자)</string>
    <string name="nick_name_text_4">! 닉네임은 8자리 까지 입력할 수 있습니다</string>

    <string name="home_text_1">%s님을 위한 메뉴 추천</string>
    <string name="home_text_2">프로필 수정</string>
    <string name="home_text_3">내 찜 목록</string>
    <string name="home_text_4">내가 찍은 음식</string>
    <string name="home_text_5">앱 정보</string>
    <string name="home_text_6"><u>내 정보 초기화</u></string>
    <string name="home_text_7">먹고싶은 음식을 찜 해보세요</string>
    <string name="home_text_8">음식 사진을 찍어보세요</string>
    <string name="home_text_9">앱 이름:</string>
    <string name="home_text_10">만든 사람:</string>
    <string name="home_text_11">연락처:</string>
    <string name="home_text_12">이메일:</string>
    <string name="home_text_13">버전 %s</string>
    <string name="home_text_14"><u>lkckss1234@gmail.com</u></string>
    <string name="home_text_15">마이 페이지 - 내 찜 목록에 저장되었습니다</string>
    <string name="home_text_16">내 찜 목록에서 삭제되었습니다</string>
    <string name="home_text_17">돌림판 돌리기</string>
    <string name="home_text_18">오늘의 점심 메뉴는\n%s 입니다!</string>
    <string name="home_text_19"><u>메뉴 새로고침</u></string>
    <string name="home_text_20">돌림판을 돌려주세요!</string>
    <string name="home_text_21">메뉴 화면에서 음식을 찜 할 수 있어요!\n메뉴 구경하고 찜 해볼까요?</string>
    <string name="home_text_22">찜 하러 가기</string>
    <string name="home_text_23">내가 먹은 음식을 기록할 수 있어요!\n사진을 올려볼까요?</string>
    <string name="home_text_24">최신 버전입니다</string>
    <string name="home_text_25"><u>문의하기</u></string>

    <string name="sheet_text_1">프로필을 설정해보세요</string>
    <string name="sheet_text_2">프로필 사진 설정</string>
    <string name="sheet_text_3">닫기</string>
    <string name="sheet_text_4">저장</string>
    <string name="sheet_text_5">카메라</string>
    <string name="sheet_text_6">앨범</string>
    <string name="sheet_text_7">닉네임</string>
    <string name="sheet_text_8">최애 음식</string>
    <string name="sheet_text_9">%s님이 가장 좋아하는 음식을 입력해주세요</string>
    <string name="sheet_text_10">! 닉네임을 입력해주세요</string>
    <string name="sheet_text_11">! 최애 음식은 8자리 까지 입력할 수 있습니다</string>
    <string name="sheet_text_12">프로필 사진 선택</string>
    <string name="sheet_text_13">사진 촬영</string>
    <string name="sheet_text_14">앨범에서 선택</string>
    <string name="sheet_text_15"><u>기본 이미지로 변경</u></string>
    <string name="sheet_text_16"></string>

    <string name="popup_text_1">내정보를 초기화 하시겠습니까?</string>
    <string name="popup_text_2">취소</string>
    <string name="popup_text_3">확인</string>
    <string name="popup_text_4">내 찜 목록과 내가 찍은 음식이 초기화 됩니다.</string>

</resources>