<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5">

    <!-- 헤더 -->
    <include
        android:id="@+id/incHeader"
        layout="@layout/inc_common_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 닉네임 -->
    <TextView
        android:id="@+id/tvTitle"
        style="@style/sharpsansMedium.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/nick_name_text_1"
        android:textColor="@color/color_999999"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/incHeader" />

    <!-- 닉네임 입력 -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNickName"
        style="@style/sharpsansRegular.16"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="center_vertical"
        android:hint="@string/nick_name_text_3"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_999999"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSelectHandle="@drawable/edittext_text_handle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- 닉네임 8자리 넘을 시 경고 -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWarning"
        style="@style/robotoMedium.11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/nick_name_text_4"
        android:textColor="@color/color_ff0000"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNickName" />

    <!-- 다음 버튼 -->
    <com.example.lunchrecommendation.view.custom.CommonButton
        android:id="@+id/btnNext"
        style="@style/sharpsansBold.16"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>