<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5">

    <include
        android:id="@+id/incHeader"
        layout="@layout/inc_common_header_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 찍은 음식 사진 없을 때 노출 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNoFoodPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoFoodPhotoTitle"
            style="@style/robotoBold.20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home_text_8"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoFoodPhotoSubTitle"
            style="@style/robotoRegular.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/home_text_23"
            android:textColor="@color/color_999999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNoFoodPhotoTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/bottomView"
        app:layout_constraintTop_toBottomOf="@id/incHeader" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llPhoto"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCamera"
            style="@style/robotoRegular.12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_camera"
            android:drawablePadding="-15dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/sheet_text_13"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAlbum"
            style="@style/robotoRegular.12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_gallery"
            android:drawablePadding="-15dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/sheet_text_14"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_cccccc"
        app:layout_constraintBottom_toTopOf="@id/llPhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>