<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tool:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_sheet_radius_28">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="24dp">

                <!-- 타이틀 -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    style="@style/sharpsansBold.18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/sheet_text_1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- 프로필 이미지 -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvProfile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    app:cardBackgroundColor="@color/color_f5f5f5"
                    app:cardCornerRadius="60dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivNoProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_no_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clEdit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_edit"
                    app:layout_constraintBottom_toBottomOf="@id/cvProfile"
                    app:layout_constraintEnd_toEndOf="@id/cvProfile">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_edit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- 닉네임 설정 -->
                <TextView
                    android:id="@+id/tvNickName"
                    style="@style/sharpsansMedium.14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/sheet_text_7"
                    android:textColor="@color/color_999999"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cvProfile" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etNickName"
                    style="@style/sharpsansRegular.16"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_999999"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:textSelectHandle="@drawable/edittext_text_handle"
                    app:layout_constraintTop_toBottomOf="@id/tvNickName" />

                <!-- 닉네임 8자리 넘어갈 시 경고 -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvWarningA"
                    style="@style/robotoMedium.11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/nick_name_text_4"
                    android:textColor="@color/color_ff0000"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etNickName" />

                <!-- 최애 메뉴 설정 -->
                <TextView
                    android:id="@+id/tvFavoriteMenu"
                    style="@style/sharpsansMedium.14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/sheet_text_8"
                    android:textColor="@color/color_999999"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvWarningA" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etFavoriteFood"
                    style="@style/sharpsansRegular.14"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="start"
                    android:hint="@string/sheet_text_9"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="12dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_999999"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:textSelectHandle="@drawable/edittext_text_handle"
                    app:layout_constraintTop_toBottomOf="@id/tvFavoriteMenu" />

                <!-- 최애 음식 8자리 넘어갈 시 경고 -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvWarningB"
                    style="@style/robotoMedium.11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/sheet_text_11"
                    android:textColor="@color/color_ff0000"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etFavoriteFood" />

                <!-- 닫기, 저장 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@color/white"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@id/etFavoriteFood">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvClose"
                        style="@style/sharpsansBold.13"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_close"
                        android:gravity="center"
                        android:text="@string/close"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSave"
                        style="@style/sharpsansBold.13"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_save"
                        android:gravity="center"
                        android:text="@string/sheet_text_4"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>