<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/color_333333">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_10_ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 타이틀 -->
        <TextView
            android:id="@+id/tvTitle"
            style="@style/sharpsansBold.18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/popup_text_1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 내용 -->
        <TextView
            android:id="@+id/tvContent"
            style="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/popup_text_2"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/color_e6e6e6"
            app:layout_constraintBottom_toTopOf="@id/llButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContent">

            <!-- 왼쪽 버튼 -->
            <TextView
                android:id="@+id/btnLeft"
                style="@style/sharpsansBold.15"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/popup_text_2"
                android:textColor="@color/color_999999" />

            <View
                android:id="@+id/vwDivider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_e6e6e6" />

            <!-- 오른쪽 버튼 -->
            <TextView
                android:id="@+id/btnRight"
                style="@style/sharpsansBold.15"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/popup_text_3"
                android:textColor="@color/color_3377ff" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>